# docs/swagger.yaml
@@ -88,10 +88,6 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/domains.ErrorResponse'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/domains.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
